TST+BLD Add locking and pause tests and fix Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,4 @@ install:
   - sudo luarocks install luafilesystem
   - sudo luarocks install busted
 
-script: "busted *_test.lua"
+script: "busted spec/init_spec.lua"
